# cuttingboard

./: .env  .env.example  .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  CODEX.md  MILESTONE_v0.3.md  README.md  VISION.md  config.toml  dashboard-surfaces-recon.md  fix_workflow.sh  mockup.html  mockup_echofi.html  mockup_zeex.html  pyproject.toml  repo_snapshot.md  run_daily.sh  traceback.txt  validate_cuttingboard.sh
.claude/: settings.json
.claude/hooks/: canonical_read_guard.sh  git_gate.sh  prd_eval.sh  protect_files.sh  stop_snapshot.sh  test_gate.sh
.github/workflows/: ci.yml  codex-review.yml  cuttingboard.yml  dashboard_preview.yml  hourly_alert.yml  macro_awareness.yml  pages.yml  prd190_r4_diff.yml  telegram_debug.yml
algos/: __init__.py  orb_reference.py
audits/: 2026-05-26_output_translation.md  2026-05-27_output_translation.md  BUILD_PLAN.md  CODEX_REVIEW.md  CUTTINGBOARD_AUDIT_PLAN.md  EXECUTION_DOCTRINE.md  FABLE_REVIEW.md  FINDINGS.md  RECONCILED_FINDINGS.md  inventory-audit-brief.md
audits/alignment-2026-05-22/: 00-summary.md  01-module-alignment.md  02-sidecar-discipline.md  03-prediction-vs-description.md  04-non-goals-check.md  05-prd-adherence-sample.md  06-runtime-monolith.md  07-vision-currency-flags.md
audits/alignment-2026-07-01/: alignment-check-6.md
audits/cleanup-2026-05-22/: branch-cleanup.md  gitleaks-output.md  verifications.md  vulture-output.md  vulture-raw.txt
audits/codebase-review-2026-07-03/: FABLE_WINDOW_PLAN.md  LEARNING_COMPANION.md  (+2 more)
backtesting/: README.md  run_orb_backtest.py
cuttingboard/: __init__.py  __main__.py  alert_runner.py  audit.py  chain_validation.py  config.py  confirmation.py  contract.py  contract_types.py  correlation.py  derived.py  entry_quality.py  evaluation.py  execution_policy.py  flow.py  ingestion.py  intraday_state_engine.py  invalidation.py  macro_pressure.py  manual_journal.py  market_map.py  market_map_lifecycle.py  moomoo_join.py  moomoo_parser.py  moomoo_review.py  normalization.py  notifications.py  notify_test.py  options.py  orb_0dte.py  orb_observation.py  orb_replay.py  orb_shadow.py  output.py  overnight_policy.py  performance_engine.py  qualification.py  red_folder.py  regime.py  review_scorecard.py  (+16 more)
data/: macro_awareness_eval_corpus.json  red_folder_2026.json
docs/: AGENT_BUILD_REPORT_TEMPLATE.md  AGENT_SESSION_BOOTSTRAP.md  AGENT_WORKFLOW.md  CALL_SITE_MAP.md  CLAUDE_HOOKS.md  CONSUMERS.md  DECISIONS.md  PRD-020.md  PRD_MICRO_TEMPLATE.md  PRD_PROCESS.md  PRD_REGISTRY.md  PRD_REVIEW_TEMPLATE.md  PRD_TEMPLATE.md  PROJECT_STATE.md  SCHEMA_MAP.md  architecture.md  artifact_flow_map.md  audit_doctrine.md  decision_quality_map.md  dev_workflow.md  engine_doctor.md  knowledge_systems.md  manual_trade_journal_schema.md  options_framework.md  orb_shadow_artifacts.md  prd_index.json  regime_model.md  renderer_decomposition_map.md  review_scorecard_schema.md  roadmap.md  roadmap_beta.md  runbook.md  sidecar_doctrine.md  system_logic_map.md  system_map.md  trade_qualification.md  universe_taxonomy.md
logs/: audit.jsonl  crontab.backup.2026-04-13-103924  evaluation.jsonl  intraday_state.json  last_hourly_slot.json  last_notification_state.json  latest_contract.json  latest_hourly_contract.json  latest_hourly_market_map.json  latest_hourly_payload.json  latest_hourly_run.json  latest_payload.json  latest_run.json  macro_drivers_snapshot.json  market_map.json  performance_summary.json  regime_history.jsonl  run_2026-04-12_130000.json  run_2026-04-13_174345.json  run_2026-04-13_184420.json  run_2026-04-14_125002.json  run_2026-04-15_051502.json  run_2026-04-15_125002.json  run_2026-04-15_161319.json  run_2026-04-16_125002.json  run_2026-04-16_164246.json  run_2026-04-17_125015.json  run_2026-04-19_104119.json  run_2026-04-20_125022.json  run_2026-04-21_180050.json  run_2026-04-21_180224.json  run_2026-04-21_182535.json  run_2026-04-21_192510.json  run_2026-04-21_202142.json  run_2026-04-22_125002.json  run_2026-04-23_125002.json  run_2026-04-23_193427.json  run_2026-04-23_193940.json  run_2026-04-24_125002.json  run_2026-04-27_125001.json  (+75 more)
pinescripts/: 0dte Momentum Setup  README.md
recon/: board-state-20260626.md  board-state-20260630.md  debt-sweep-20260625.md
reports/: 2026-04-11.md  2026-04-12.md  2026-04-13.md  2026-04-14.md  2026-04-15.md  2026-04-16.md  2026-04-19.md  2026-04-21.md  2026-04-22.md  2026-04-23.md  2026-04-24.md  2026-04-27.md  2026-04-30.md  2026-05-02.md  2026-05-03.md  2026-05-04.md  2026-05-05.md
scripts/: check_readiness.py  clean_generated_artifacts.sh  gitnexus-analyze.sh  install_hooks.sh  prd190_r4_diff.py  prd_close.sh  prd_open.sh  pre_commit_sanity.sh  pre_push_check.sh  preview_dashboard.sh  preview_fixtures.py  resolve_run_mode.py  validate_consumer_prd.py
tests/: conftest.py  dash_helpers.py  preview_fixtures.py  test_account_equity_sizing.py  test_audit.py  test_canonical_read_guard_hook.py  test_chain_validation.py  test_check_readiness.py  test_ci_artifact_hygiene.py  test_codex_review.py  test_config.py  test_confirmation_contract.py  test_continuation_audit.py  test_continuation_mode.py  test_contract.py  test_contract_finalization.py  test_contract_macro_drivers.py  test_contract_types.py  test_correlation.py  test_dash_boundary.py  test_dash_candidates.py  test_dash_core.py  test_dash_io.py  test_dash_level_diagram.py  test_dash_macro.py  test_dash_run_history.py  test_dash_system_state.py  test_dash_timestamps.py  test_dashboard_integrator.py  test_dashboard_renderer.py  test_dashboard_renderer_macro_tape.py  test_decision_trace.py  test_delivery.py  test_derived.py  test_engine_doctor_gate.py  test_entry_quality.py  test_evaluation.py  test_execution_policy.py  test_expansion_regime.py  test_fixture_mode.py  (+84 more)
tools/: baseline.json  ci_push_artifacts.sh  ci_restore_publish_state.sh  engine_doctor.py  macro_awareness_collector.py  macro_awareness_eval.py  macro_collector.py  prune_run_history.sh  publish_dashboard.py  validate_prd_registry.py
ui/: app.js  contract.json  contract_viewer.html  dashboard.html  index.html  styles.css
(+528 files in other folders)
