[project]
name = "cuttingboard"
version = "1.0.0"
requires-python = ">=3.11"

dependencies = [
    "yfinance>=0.2.40",
    "pandas>=2.0.0",
    "numpy>=1.26.0",          # directly imported by tests/test_derived.py
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "pyarrow>=14.0.0",        # transitive, required for parquet I/O via pandas
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.4.0",
    "PyYAML>=6.0",            # tests/test_ci_artifact_hygiene.py parses workflow YAML
]
chain = [
    "yahooquery>=2.3.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["cuttingboard*"]

[tool.pytest.ini_options]
# PRD-264: default "prepend" import mode inserts the repo root at
# sys.path[0] (ahead of PYTHONPATH) to resolve tests/__init__.py as a
# package -- exactly the shadowing a PYTHONPATH package-swap check needs
# to not happen. importlib mode imports test modules without that
# insertion; tests/conftest.py separately appends the repo root so
# `tests.*` and `scripts.*` cross-imports keep resolving, at the end of
# sys.path rather than the front.
addopts = "--import-mode=importlib"
