[project]
name = "cuttingboard"
version = "1.0.0"
requires-python = ">=3.11"

dependencies = [
    "yfinance>=0.2.40",
    "pandas>=2.0.0",
    "numpy>=1.26.0",          # directly imported by tests/test_derived.py
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "pyarrow>=14.0.0",        # transitive, required for parquet I/O via pandas
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    # PRD-273: upper bound is load-bearing, not caution. ruff 0.16.0 expanded
    # its DEFAULT rule set and turned CI red on unchanged code. The pin bounds
    # which ruff runs; [tool.ruff.lint] below makes the rule set explicit so a
    # future widening of this bound cannot silently re-expand it.
    "ruff>=0.4.0,<0.16",
    "PyYAML>=6.0",            # tests/test_ci_artifact_hygiene.py parses workflow YAML
]
chain = [
    "yahooquery>=2.3.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["cuttingboard*"]

[tool.pytest.ini_options]
# PRD-264: default "prepend" import mode inserts the repo root at
# sys.path[0] (ahead of PYTHONPATH) to resolve tests/__init__.py as a
# package -- exactly the shadowing a PYTHONPATH package-swap check needs
# to not happen. importlib mode imports test modules without that
# insertion; tests/conftest.py separately appends the repo root so
# `tests.*` and `scripts.*` cross-imports keep resolving, at the end of
# sys.path rather than the front.
addopts = "--import-mode=importlib"

[tool.ruff.lint]
# PRD-273: declared explicitly, never left to ruff's implicit defaults.
# Before this, the repo had no ruff configuration at all, so `ruff check`
# enforced whatever the installed version happened to default to -- the same
# implicit-movable-contract shape PRD-264 closed one section above, where a
# missing [tool.pytest.ini_options] made the PYTHONPATH-shadowing trap
# possible.
#
# This set is ruff's HISTORICAL default, chosen because it reproduces the
# green baseline exactly rather than redefining it: verified to report zero
# errors on pristine origin/main under BOTH ruff 0.15.8 (the last version
# main was green under) and 0.16.0 (the version that broke it). It therefore
# suppresses nothing that was previously enforced.
#   E4 - imports        E7 - statements
#   E9 - syntax/IO      F  - pyflakes
# Widening this set is a deliberate, separate change: ruff 0.16.0's defaults
# report 1112 further violations across ~65 files. See PRD-273 FOLLOW-UP
# CANDIDATES -- recorded, not queued.
select = ["E4", "E7", "E9", "F"]
